@@ -146,6 +146,7 @@ ot_add_source_file (SkellamFactory.cxx)
 ot_add_source_file (SmoothedUniform.cxx)
 ot_add_source_file (SquaredNormal.cxx)
 ot_add_source_file (Student.cxx)
+ot_add_source_file (StudentCopula.cxx)
 ot_add_source_file (StudentFunctions.cxx)
 ot_add_source_file (StudentFactory.cxx)
 ot_add_source_file (Trapezoidal.cxx)
@@ -316,6 +317,7 @@ ot_install_header_file (SmoothedUniform.hxx)
 ot_install_header_file (SquaredNormal.hxx)
 ot_install_header_file (StudentFactory.hxx)
 ot_install_header_file (Student.hxx)
+ot_install_header_file (StudentCopula.hxx)
 ot_install_header_file (StudentFunctions.hxx)
 ot_install_header_file (TrapezoidalFactory.hxx)
 ot_install_header_file (Trapezoidal.hxx)
