@@ -8,6 +8,7 @@
 
 ==== New classes ====
  * LatentVariableModel (openturns.experimental)
+ * StudentCopula (openturns.experimental)
 
 ==== API changes ====
  * Removed deprecated (Non)LinearLeastSquaresCalibration::getCandidate method
